--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 body{
     background:#f3f3f3;
     color:#3333;
-    width:100%
+    width:100%;
     font-family:sans-serif;
     margin:0 auto;
 }
 
 .header{
-    width:90%
+    width:90%;
     margin:auto;
     height:120px;
     line-height:120px;
     background:#417aa8;
     color:#fff;
 }
+
